/**
 * The enum Message type.
 */
public enum MessageType {
    /**
     * Name request message type.
     */
    NAME_REQUEST,
    /**
     * User name message type.
     */
    USER_NAME,
    /**
     * Name accepted message type.
     */
    NAME_ACCEPTED,
    /**
     * Text message type.
     */
    TEXT,
    /**
     * User added message type.
     */
    USER_ADDED,
    /**
     * User removed message type.
     */
    USER_REMOVED
}
/*Library der unterschiedlichen Arten von Informationsweitergabe über den Server*/